Fixed spacing and sizing issues in archive and search views.

--- a/wp-content/themes/keeper/sass/site/primary/_posts-and-pages.scss
+++ b/wp-content/themes/keeper/sass/site/primary/_posts-and-pages.scss
@@ -51,6 +51,10 @@
 		}
 	}
 
+	.article-intro {
+		min-height: 0 !important;
+	}
+
 	@media screen and (min-width: 600px) {
 		.article-intro {
 			max-width: 30%;
@@ -58,11 +62,26 @@
 	}
 }
 
-.no-results {
-	h1 {
-		line-height: 100%;
+.archive-view.tag {
+	.keeper-blog-intro {
+		h2 {
+			font-size: 5rem;
+			line-height: 100%;
+		}
+	}
+	
+	.article-intro {
+		min-height: 0 !important;
+	}
+
+	@media screen and (min-width: 600px) {
+		.article-intro {
+			max-width: 30%;
+		}
 	}
 }
+
+
 
 
 .archive-view {
@@ -96,6 +115,7 @@
 		@media screen and (min-width: 791px) {
 			min-height: 545px;
 		}
+
 	}
 
 	.article-intro {
@@ -162,6 +182,19 @@
 	.entry-footer {
 		margin-top: .8rem;
 	}
+
+	.no-results {
+		h1 {
+			line-height: 100%;
+		}
+	
+		.article-intro {
+			min-height: 0 !important;
+			margin-top: 0;
+		}
+	}
+	
+
 }
 .content-wrapper {
 	padding: 4rem 4rem;
